--- a/app/src/main/res/layout/activity_detail_ayat.xml
+++ b/app/src/main/res/layout/activity_detail_ayat.xml
@@ -35,7 +35,6 @@
         tools:text="Al fatihah" />
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/pb_ayat"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -125,11 +124,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
             <ProgressBar
-                android:visibility="gone"
-                android:id="@+id/progressBar"
+                android:id="@+id/pb_ayat"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/rv_ayat"
                 app:layout_constraintEnd_toEndOf="@+id/rv_ayat"
                 app:layout_constraintStart_toStartOf="@+id/rv_ayat"
@@ -140,4 +139,6 @@
 
 
     </androidx.core.widget.NestedScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
